# Bi-Intra-prediction-for-compressive-sensing-images

MMSP2020/: Intra_Main.m  Intra_RateControl_Main.m
libraries/: BCS_encoder.m  BCS_reconstruction.m  Multi_modes_coding_method.m  PSNR.m  SRcontrol.m  coding_method.m  coding_method_first_block.m  measurement_entropy.m  vqsplit.m
libraries/D-AMP_Toolbox/: ReadMe
libraries/D-AMP_Toolbox/Algorithms/: AMP.m  DAMP.m  DAMP_dct.m  DAMP_dct_tune.m  DAMP_dwt_tune.m  DAMP_oneIter.m  DAMP_rnan.m  DIT.m  DIT_oneIter.m  denoise.m  denoise_tune.m  denoise_tune_dwt.m
libraries/D-AMP_Toolbox/Demos/: A_mywhth_damp_hadamard.m  A_mywhth_damp_hadamard_perm.m  At_mywhth_damp_hadamard.m  At_mywhth_damp_hadamard_perm.m  CS_Imaging_Demo.m  CS_Imaging_Demo_hadmard.m  CS_Imaging_Demo_hadmard_perm.m  perm64k.mat  test_permu.m
libraries/D-AMP_Toolbox/GAP_2d/: GAP_2D_wL21_tree.m  GAP_2D_wL21_tree_hadmard.m  GAP_3D_wL21_grayscale.m  GAP_3D_wL21_hadmard_rgb.m  GAP_3D_wL21_hadmard_rgb_randsize.m  Perm16K.mat  SS_PSNR_3D.m  YuanGAP_2D_Improvewavelet.m  getPhitheta.m  getPinvPhitheta.m  main_GAP_CACTI_gray.m  my_get_weight.m  my_get_weight3d_tree_exp.m  my_get_weight_tree.m  my_get_weight_wavelettree.m  myfastdct2.m  myfastdwt2.m  myfastdwt2_level.m  myfastidct2.m  myfastidwt2.m  myfastidwt2_level.m  test_GAP_2D_hadamard.m  test_GAP_2D_hadamard_3d_rgb.m  test_GAP_2D_hadamard_3d_rgb_randsize.m  test_GAP_2D_hadamard_book.m  test_GAP_2D_hadamard_nosave.m  test_GAP_2D_hadamard_nosave_rgb.m  test_GAP_hadamard_rgb_real.m  test_gap_real_lensless.m
libraries/D-AMP_Toolbox/TVAL3_beta2.4/TVAL3_beta2.4/Fast_Walsh_Hadamard_Transform/: readme.txt
libraries/D-AMP_Toolbox/TVAL3_beta2.4/TVAL3_beta2.4/Solver/: readme.txt
libraries/KL1p-0.4.2/: README.txt  VERSIONS.txt
libraries/KL1p-0.4.2/examples/ComplexSeededEMBPCompressedSensingExample/: CMakeLists.txt  ComplexSeededEMBPCompressedSensingExample.cpp  ComplexSeededEMBPCompressedSensingExample.h
libraries/KL1p-0.4.2/examples/ComplexSeededEMBPCompressedSensingExample/macos/: UnixMakefile_x64Debug_Make.sh  UnixMakefile_x64Release_Make.sh  UnixMakefile_x86Release_Make.sh
libraries/KL1p-0.4.2/examples/ComplexSeededEMBPCompressedSensingExample/unix/: UnixMakefile_x86Debug_Make.sh  main.cpp
libraries/KL1p-0.4.2/examples/ComplexSeededEMBPCompressedSensingExample/win/: Visual2005_x64Debug_Make.bat  Visual2005_x64Release_Make.bat  Visual2005_x86Debug_Make.bat  Visual2005_x86Release_Make.bat  Visual2008_x64Debug_Make.bat  Visual2008_x64Release_Make.bat  Visual2008_x86Debug_Make.bat  Visual2008_x86Release_Make.bat  Visual2010Express_x64Debug_Make.bat  Visual2010Express_x64Release_Make.bat  Visual2010Express_x86Debug_Make.bat  Visual2010Express_x86Release_Make.bat  Visual2010_x64Debug_Make.bat  Visual2010_x64Release_Make.bat  Visual2010_x86Debug_Make.bat  Visual2010_x86Release_Make.bat  main.cpp
libraries/KL1p-0.4.2/examples/CompressedSensingExample/: CMakeLists.txt  CompressedSensingExample.cpp
libraries/KL1p-0.4.2/examples/CompressedSensingExample/macos/: UnixMakefile_x64Debug_Make.sh  UnixMakefile_x86Debug_Make.sh  UnixMakefile_x86Release_Make.sh
libraries/KL1p-0.4.2/examples/CompressedSensingExample/unix/: UnixMakefile_x64Release_Make.sh  main.cpp
libraries/KL1p-0.4.2/examples/CompressedSensingExample/win/: Visual2005_x64Debug_Make.bat  Visual2005_x64Release_Make.bat  Visual2005_x86Debug_Make.bat  Visual2005_x86Release_Make.bat  Visual2008_x64Debug_Make.bat  Visual2008_x64Release_Make.bat  Visual2008_x86Debug_Make.bat  Visual2008_x86Release_Make.bat  Visual2010Express_x64Debug_Make.bat  Visual2010Express_x64Release_Make.bat  Visual2010Express_x86Debug_Make.bat  Visual2010Express_x86Release_Make.bat  Visual2010_x64Debug_Make.bat  Visual2010_x64Release_Make.bat  Visual2010_x86Debug_Make.bat  Visual2010_x86Release_Make.bat  main.cpp
libraries/KL1p-0.4.2/examples/FourierCompressedSensingExample/: CMakeLists.txt  FourierCompressedSensingExample.cpp  FourierCompressedSensingExample.h
libraries/KL1p-0.4.2/examples/FourierCompressedSensingExample/macos/: UnixMakefile_x64Debug_Make.sh  UnixMakefile_x64Release_Make.sh  UnixMakefile_x86Debug_Make.sh
libraries/KL1p-0.4.2/examples/FourierCompressedSensingExample/unix/: UnixMakefile_x86Release_Make.sh  main.cpp
libraries/KL1p-0.4.2/examples/FourierCompressedSensingExample/win/: Visual2005_x64Debug_Make.bat  Visual2005_x64Release_Make.bat  Visual2005_x86Debug_Make.bat  Visual2005_x86Release_Make.bat  Visual2008_x64Debug_Make.bat  Visual2008_x64Release_Make.bat  Visual2008_x86Debug_Make.bat  Visual2008_x86Release_Make.bat  Visual2010_x64Debug_Make.bat  (+8 more)
libraries/KL1p-0.4.2/examples/SeededEMBPCompressedSensingExample/: CMakeLists.txt  SeededEMBPCompressedSensingExample.cpp  SeededEMBPCompressedSensingExample.h
libraries/KL1p-0.4.2/include/: KSciInclude.h
libraries/Single-Core L-1 Minimization Lib in C/.svn/: entries
libraries/Single-Core L-1 Minimization Lib in C/.svn/text-base/: Makefile.svn-base  SolveDALM_fast.cu.svn-base
libraries/Single-Core L-1 Minimization Lib in C/dalm/fast/: Makefile  SolveDALM_fast.h  SolveDALM_fast.m  SolveDALM_fast_mex.cpp  test_fast.m  test_random.cpp
libraries/Single-Core L-1 Minimization Lib in C/dalm/regular/: Makefile  SolveDALM.h  SolveDALM.m  SolveDALM_mex.cpp  test.m  test_random.cpp
libraries/Single-Core L-1 Minimization Lib in C/homotopy/: Makefile  SolveHomotopy.h  SolveHomotopy_mex.cpp  test_fast.m  test_random.cpp
libraries/Single-Core L-1 Minimization Lib in C/palm/: Makefile  SolvePALM.h  SolvePALM_mex.cpp  norm_x_e_primal.m  test.m  test_random.cpp
libraries/Single-Core L-1 Minimization Lib in C/util/: acml_blas_wrappers.cpp  matlab_blas_wrappers.cpp  portable_blas_wrapper.h  timing.h
libraries/YALL1/: YALL1_group.m  demo_joint.m  demo_joint_multiple_A.m
libraries/YALL1/main_solvers/: joint_primal_solver.m
libraries/YALL1/subprob_solvers/: linsolve_primal.m  shrink_group.m
libraries/block_circulant/: test_BlockCirculant.m
libraries/block_circulant/@BlockCirculant/: BlockCirculant.m  iscirculant.m
libraries/l1magic/Optimization/: l1qc_logbarrier.m
(+28 files in other folders)
